--- a/source/posts/2016/12-27-podcast-04-49.html.md
+++ b/source/posts/2016/12-27-podcast-04-49.html.md
@@ -1,5 +1,5 @@
 ---
-title: "49 выпуск 04 сезона.  и прочее"
+title: "49 выпуск 04 сезона. Ruby 2.4.0, Rails 5.0.1, AnyCable, Sidekiq on Production, JavaScript: 2016 in Review, HoloJS и прочее"
 date: 2016-12-27
 tags:
  - podcasts
@@ -16,13 +16,12 @@ main_image: "/images/static/04/0449.png"
 
 ## Ruby
 
- - [Rails 5.0.1 has been released](http://weblog.rubyonrails.org/2016/12/21/Rails-5-0-1-has-been-released/)
- - [Ruby 2.4.0 Released](https://www.ruby-lang.org/en/news/2016/12/25/ruby-2-4-0-released/)
+ - [Ruby 2.4.0 Released](https://www.ruby-lang.org/en/news/2016/12/25/ruby-2-4-0-released/), [What's new in Ruby 2.4?](http://nithinbekal.com/posts/ruby-2-4-features/), [Ruby 2.4 adds support for extracting named capture groups using MatchData#values_at](http://blog.bigbinary.com/2016/12/21/ruby-2.4-adds-matchdata-values-at-for-extracting-named-and-positional-capture-groups.html), [Ruby 2.4 adds infinite? and finite? methods to Numeric](http://blog.bigbinary.com/2016/12/19/ruby-2-4-adds-infinite-method-to-numeric.html) и [Rails 5.0.1 has been released](http://weblog.rubyonrails.org/2016/12/21/Rails-5-0-1-has-been-released/)
+ - [AnyCable: Action Cable on steroids](https://evilmartians.com/chronicles/anycable-actioncable-on-steroids), [Best Books to Learn Ruby on Rails](https://prograils.com/posts/ruby-rails-books-learn-beginners) и [Sidekiq on Production](https://www.driftingruby.com/episodes/sidekiq-on-production)
 
 ## JavaScript
 
- - [Front-End Performance Checklist 2017](https://www.smashingmagazine.com/2016/12/front-end-performance-checklist-2017-pdf-pages/)
- - [Mini.css - minimal, responsive, style-agnostic CSS toolkit](https://chalarangelo.github.io/mini.css/)
- - [WMail - the missing desktop client for Gmail & Google Inbox](https://thomas101.github.io/wmail/)
+ - [JavaScript: 2016 in Review](https://www.sitepoint.com/javascript-2016-in-review/), [We need a better way of promoting JavaScript projects!](https://medium.com/@domagojk/the-js-community-needs-a-model-of-scientific-publishing-97cb2e3f8163) и [Front-End Performance Checklist 2017](https://www.smashingmagazine.com/2016/12/front-end-performance-checklist-2017-pdf-pages/)
+ - [HoloJS - framework for creating holographic apps using JavaScript and WebGL](https://github.com/Microsoft/HoloJS), [RxDB - offline-first database](https://github.com/pubkey/rxdb), [Switzerland - a functional approach to Web Components by applying middleware to your components](https://github.com/Wildhoney/Switzerland), [Mini.css - minimal, responsive, style-agnostic CSS toolkit](https://chalarangelo.github.io/mini.css/) и [WMail - the missing desktop client for Gmail & Google Inbox](https://thomas101.github.io/wmail/)
 
 READMORE
