--- a/source/posts/2017/01-09-podcast-05-01.html.md
+++ b/source/posts/2017/01-09-podcast-05-01.html.md
@@ -21,17 +21,26 @@ main_image: "/images/static/05/0501.png"
  - [Concurrency in Rails 5.0](https://bibwild.wordpress.com/2016/12/29/concurrency-in-rails-5-0/)
  - [The 15 most popular Ruby links of 2016](https://medium.com/statuscode/the-15-most-popular-ruby-links-of-2016-ff3cf06d5b80)
  - [Crystal new year resolutions for 2017: 1.0](https://crystal-lang.org/2016/12/29/crystal-new-year-resolutions-for-2017-1-0.html)
+ - [RailsOr - support && Add syntax sugar to #or query method in Rails 3, 4, 5](https://github.com/khiav223577/rails_or)
  - [PluckAll - pluck multiple attributes in Rails 3, 4, 5, and can return data as hash instead of only array](https://github.com/khiav223577/pluck_all)
+ - [Scale Out Multi-Tenant Apps based on Ruby on Rails](https://www.citusdata.com/blog/2017/01/05/easily-scale-out-multi-tenant-apps/)
+ - [Rails Security Checklist](https://github.com/eliotsykes/rails-security-checklist)
+ - [Periodic Tasks with sidekiq-cron](https://www.driftingruby.com/episodes/periodic-tasks-with-sidekiq-cron)
 
 ## JavaScript
 
+ - [The top rising JavaScript trends to watch in 2017](https://medium.com/commit-push/the-top-rising-javascript-trends-to-watch-in-2017-86d8e87db3b3)
  - [MobX - Like React, but for Data](http://danielearwicker.github.io/MobX_Like_React_but_for_Data.html)
+ - [From Sass to PostCSS](https://tylergaw.com/articles/sass-to-postcss)
+ - [InfernoJS 1.0](https://infernojs.org/)
  - [Vue in 2016](https://medium.com/the-vue-point/vue-in-2016-8df71d98bfb3)
  - [Lazy Evaluation in Javascript](https://hackernoon.com/lazy-evaluation-in-javascript-84f7072631b7)
  - [What to learn in 2017 if you’re a frontend developer](https://medium.com/@sapegin/what-to-learn-in-2017-if-youre-a-frontend-developer-b6cfef46effd)
  - [Let’s use const! Here’s why](https://ponyfoo.com/articles/var-let-const)
  - [Markdown.css - CSS to make HTML markup look like plain-text markdown](http://mrcoles.com/demo/markdown-css/)
+ - [AVA - a blazing fast, concurrent, and futuristic test runner](https://github.com/avajs/ava)
  - [Leakage - Memory Leak Testing for Node](https://github.com/andywer/leakage)
+ - [Rellax - a buttery smooth, lightweight, vanilla javascript parallax library](https://dixonandmoe.com/rellax/)
 
 
 READMORE
