--- a/source/posts/2017/01-22-podcast-05-03.html.md
+++ b/source/posts/2017/01-22-podcast-05-03.html.md
@@ -1,5 +1,5 @@
 ---
-title: "03 выпуск 05 сезона.  и прочее"
+title: "03 выпуск 05 сезона. Passenger 5.1, Webpack 2.2, KaTeX for Ruby, Chartkick, Mermaid, LocalForage, Tone.js и прочее"
 date: 2017-01-22
 tags:
  - podcasts
@@ -16,23 +16,15 @@ main_image: "/images/static/05/0503.png"
 
 ## Ruby
 
- - [Passenger 5.1: a new milestone in robustness, security and efficiency](https://blog.phusion.nl/2017/01/10/passenger-5-1-1/)
- - [Is Ruby dead? Hell no! - Analyzing RubyGems stats for 2016](https://infinum.co/the-capsized-eight/analyzing-rubygems-stats-v2016)
- - [Auto-reconnect for ActiveRecord connections](http://dalibornasevic.com/posts/77-auto-reconnect-for-activerecord-connections)
- - [Writing a Sprockets plugin](http://masa331.github.io/2017/01/10/writing_sprockets_plugin.html)
- - [Ruby's Mysterious Triple Equals Operator, a.k.a. Case Equality Operator](http://www.rubyletter.com/blog/2017/01/18/ruby-triple-equals-operator.html)
- - [Bundler and Gemfile best practices](https://depfu.io/blog/2017/01/18/bundler-and-gemfile-best-practices)
- - [Chartkick: data visualization made easy with Ruby](http://blog.redpanthers.co/chartkick-data-visualization-easy-ruby/)
- - [KaTeX for Ruby](https://github.com/glebm/katex-ruby)
+ - [Passenger 5.1: a new milestone in robustness, security and efficiency](https://blog.phusion.nl/2017/01/10/passenger-5-1-1/) и [Is Ruby dead? Hell no! - Analyzing RubyGems stats for 2016](https://infinum.co/the-capsized-eight/analyzing-rubygems-stats-v2016)
+ - [Ruby's Mysterious Triple Equals Operator, a.k.a. Case Equality Operator](http://www.rubyletter.com/blog/2017/01/18/ruby-triple-equals-operator.html), [Bundler and Gemfile best practices](https://depfu.io/blog/2017/01/18/bundler-and-gemfile-best-practices) и [Auto-reconnect for ActiveRecord connections](http://dalibornasevic.com/posts/77-auto-reconnect-for-activerecord-connections)
+ - [Writing a Sprockets plugin](http://masa331.github.io/2017/01/10/writing_sprockets_plugin.html), [KaTeX for Ruby](https://github.com/glebm/katex-ruby) и [Chartkick: data visualization made easy with Ruby](http://blog.redpanthers.co/chartkick-data-visualization-easy-ruby/)
 
 ## JavaScript
 
- - [Fabric is Joining Google](https://fabric.io/blog/fabric-joins-google)
- - [Webpack 2.2: The Final Release](https://medium.com/webpack/webpack-2-2-the-final-release-76c3d43bf144)
+ - [Fabric is Joining Google](https://fabric.io/blog/fabric-joins-google), [RethinkDB: why we failed](http://www.defstartup.org/2017/01/18/why-rethinkdb-failed.html) и [Webpack 2.2: The Final Release](https://medium.com/webpack/webpack-2-2-the-final-release-76c3d43bf144)
  - [removeEventListener and this](https://kostasbariotis.com/removeeventlistener-and-this/)
- - [Mermaid - generation of diagrams and flowcharts from text in a similar manner as markdown](http://knsv.github.io/mermaid/)
- - [LocalForage - a JavaScript library that improves the offline experience of your web app by using an asynchronous data store with a simple](https://localforage.github.io/localForage/)
- - [Tone.js - a framework for creating interactive music in the browser](https://tonejs.github.io/)
+ - [Mermaid - generation of diagrams and flowcharts from text in a similar manner as markdown](http://knsv.github.io/mermaid/), [LocalForage - a JavaScript library that improves the offline experience of your web app by using an asynchronous data store with a simple](https://localforage.github.io/localForage/) и [Tone.js - a framework for creating interactive music in the browser](https://tonejs.github.io/)
 
 
 READMORE
