--- a/source/posts/2017/01-22-podcast-05-03.html.md
+++ b/source/posts/2017/01-22-podcast-05-03.html.md
@@ -3,11 +3,11 @@ title: "03 выпуск 05 сезона. Passenger 5.1, Webpack 2.2, KaTeX for R
 date: 2017-01-22
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/187/file/podfm_rwpod_my_2_187.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.02/0502.mp3"
+audio_url: "http://rwpod.podfm.ru/my/188/file/podfm_rwpod_my_3_188.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.03/0503.mp3"
 audio_format: "audio/mpeg"
-audio_length: 29440223
-duration: "00:30:33"
+audio_length: 40647215
+duration: "00:42:13"
 small_icon: mic
 main_image: "/images/static/05/0503.png"
 ---
@@ -22,8 +22,8 @@ main_image: "/images/static/05/0503.png"
 
 ## JavaScript
 
- - [Fabric is Joining Google](https://fabric.io/blog/fabric-joins-google), [RethinkDB: why we failed](http://www.defstartup.org/2017/01/18/why-rethinkdb-failed.html) и [Webpack 2.2: The Final Release](https://medium.com/webpack/webpack-2-2-the-final-release-76c3d43bf144)
- - [removeEventListener and this](https://kostasbariotis.com/removeeventlistener-and-this/)
+ - [Fabric is Joining Google](https://fabric.io/blog/fabric-joins-google), [RethinkDB: why we failed](http://www.defstartup.org/2017/01/18/why-rethinkdb-failed.html), [Learning JavaScript in 2017 sucks and this is awesome!](https://medium.com/@lucasdaltro/learning-javascript-in-2017-sucks-and-this-is-very-good-35e883223406) и [Webpack 2.2: The Final Release](https://medium.com/webpack/webpack-2-2-the-final-release-76c3d43bf144)
+ - [3 New CSS Features to Learn in 2017](https://bitsofco.de/3-new-css-features-to-learn-in-2017/), [How to Create Spotify Colorizer Effects With CSS Blend Modes](http://webdesignerwall.com/tutorials/create-spotify-colorizer-effects-css-blend-modes) и [removeEventListener and this](https://kostasbariotis.com/removeeventlistener-and-this/)
  - [Mermaid - generation of diagrams and flowcharts from text in a similar manner as markdown](http://knsv.github.io/mermaid/), [LocalForage - a JavaScript library that improves the offline experience of your web app by using an asynchronous data store with a simple](https://localforage.github.io/localForage/) и [Tone.js - a framework for creating interactive music in the browser](https://tonejs.github.io/)
 
 
