--- a/source/posts/2017/01-30-podcast-05-04.html.md
+++ b/source/posts/2017/01-30-podcast-05-04.html.md
@@ -16,11 +16,15 @@ main_image: "/images/static/05/0504.png"
 
 ## Ruby
 
- - [What makes Rails a framework worth learning in 2017?](https://www.quora.com/What-makes-Rails-a-framework-worth-learning-in-2017/answer/David-Heinemeier-Hansson?srid=tfS&share=1)
+ - [ROM 3.0 Released](http://rom-rb.org/blog/rom-3-0-released/), [Benchmarking a Go AI in Ruby: CRuby vs. Rubinius vs. JRuby vs. Truffle – a year later](https://pragtob.wordpress.com/2017/01/24/benchmarking-a-go-ai-in-ruby-cruby-vs-rubinius-vs-jruby-vs-truffle-a-year-later/) и [What makes Rails a framework worth learning in 2017?](https://www.quora.com/What-makes-Rails-a-framework-worth-learning-in-2017/answer/David-Heinemeier-Hansson?srid=tfS&share=1)
+ - [How To Add Active Admin to a Rails 5 API Application](http://www.carlosramireziii.com/how-to-add-active-admin-to-a-rails-5-api-application.html) и [Build your first Facebook Messenger bot in Ruby with Sinatra](https://hackernoon.com/smooth-coordinator-1427dce17f00)
+ - [The Difference Between to_s & to_str In Ruby](http://marcgg.com/blog/2017/01/23/ruby-to-s-to-str/), [Elixir for Rubyists](https://startlearningelixir.com/elixir-for-rubyists) и [Random Ruby Tips and Tricks](https://www.driftingruby.com/episodes/random-ruby-tips-and-tricks)
 
 ## JavaScript
 
-
+ - [Announcing Ionic 2.0.0 Final](http://blog.ionic.io/announcing-ionic-2-0-0-final/), [ES proposal: Shared memory and atomics](http://www.2ality.com/2017/01/shared-array-buffer.html) и [Making Responsive HTML Email Coding Easy With MJML](https://www.smashingmagazine.com/2017/01/making-responsive-html-email-coding-easy-with-mjml/)
+ - [Introduction to WebAssembly](https://rsms.me/wasm-intro), [Angular in Production](http://blog.mgechev.com/2017/01/17/angular-in-production/) и [The end of the clearfix hack?](https://rachelandrew.co.uk/archives/2017/01/24/the-end-of-the-clearfix-hack/)
+ - [Swarm-numberformat - format large numbers in several human-readable ways](https://erosson.github.io/swarm-numberformat/), [Tilt.js - tiny requestAnimationFrame powered 60+fps](http://gijsroge.github.io/tilt.js/) и [QArt.js - generate artistic QR code](https://kciter.github.io/qart.js/)
 
 
 READMORE
