--- a/source/posts/2017/01-30-podcast-05-04.html.md
+++ b/source/posts/2017/01-30-podcast-05-04.html.md
@@ -1,5 +1,5 @@
 ---
-title: "04 выпуск 05 сезона.  и прочее"
+title: "04 выпуск 05 сезона. ROM 3.0, Ionic 2.0.0 Final, Elixir for Rubyists, Swarm-numberformat, Tilt.js, QArt.js и прочее"
 date: 2017-01-30
 tags:
  - podcasts
