--- a/source/posts/2017/02-06-podcast-05-05.html.md
+++ b/source/posts/2017/02-06-podcast-05-05.html.md
@@ -26,5 +26,8 @@ main_image: "/images/static/05/0505.png"
  - [ES7 and ES8 Features](https://node.university/blog/498412/es7-es8) и [How calc() Works](https://bitsofco.de/how-calc-works/)
  - [Front-End Developer Handbook 2017](https://www.gitbook.com/book/frontendmasters/front-end-handbook-2017/details), [Mithril - a modern client-side Javascript framework for building Single Page Applications](http://mithril.js.org/) и [Sixflix - detects whether a host environment supports ES6](https://github.com/bevacqua/sixflix)
 
+## Conferences
+
+ - [Ruby Meditation #13](http://www.rubymeditation.com/)
 
 READMORE
