move mp3 for 5 season

--- a/source/posts/2017/02-07-podcast-05-05.html.md
+++ b/source/posts/2017/02-07-podcast-05-05.html.md
@@ -1,13 +1,13 @@
 ---
 title: "05 выпуск 05 сезона. Node.js 7.5.0, Blazer, Awesome NLP with Ruby, Letsencrypt_heroku, ES7 and ES8 Features, Mithril и прочее"
-date: 2017-02-06
+date: 2017-02-07
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/189/file/podfm_rwpod_my_4_189.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.04/0504.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/05/0505.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.05/0505.mp3"
 audio_format: "audio/mpeg"
-audio_length: 59916984
-duration: "01:02:25"
+audio_length: 47054735
+duration: "00:48:54"
 small_icon: mic
 main_image: "/images/static/05/0505.png"
 ---
