--- a/source/posts/2017/01-17-podcast-05-02.html.md
+++ b/source/posts/2017/01-17-podcast-05-02.html.md
@@ -3,7 +3,7 @@ title: "02 выпуск 05 сезона. State of the 2017 Rails Stack, Client S
 date: 2017-01-17
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/187/file/podfm_rwpod_my_2_187.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/05/0502.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.02/0502.mp3"
 audio_format: "audio/mpeg"
 audio_length: 29440223
@@ -26,4 +26,3 @@ main_image: "/images/static/05/0502.png"
 
 
 READMORE
-
