--- a/source/posts/2016/01-11-podcast-04-01.html.md
+++ b/source/posts/2016/01-11-podcast-04-01.html.md
@@ -3,7 +3,7 @@ title: "01 выпуск 04 сезона. ROM 1.0.0, Assets For Lotus, Bytecode c
 date: 2016-01-11
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/137/file/podfm_rwpod_my_1_137.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0401.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.01/0401.mp3"
 audio_format: "audio/mpeg"
 audio_length: 59382382
@@ -30,4 +30,3 @@ main_image: "/images/static/04/0401.png"
 
 
 READMORE
-
