--- a/source/posts/2016/01-25-podcast-04-03.html.md
+++ b/source/posts/2016/01-25-podcast-04-03.html.md
@@ -3,7 +3,7 @@ title: "03 выпуск 04 сезона. New Rails identity, Thread Safety With 
 date: 2016-01-25
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/139/file/podfm_rwpod_my_3_139.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0403.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.03/0403.mp3"
 audio_format: "audio/mpeg"
 audio_length: 71905035
@@ -30,4 +30,3 @@ main_image: "/images/static/04/0403.png"
 
 
 READMORE
-
