--- a/source/posts/2016/02-22-podcast-04-07.html.md
+++ b/source/posts/2016/02-22-podcast-04-07.html.md
@@ -3,7 +3,7 @@ title: "07 выпуск 04 сезона. Active Support Improvements in Rails 5,
 date: 2016-02-22
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/143/file/podfm_rwpod_my_7_143.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0407.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.07/0407.mp3"
 audio_format: "audio/mpeg"
 audio_length: 30911331
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0407.png"
 
 
 READMORE
-
