--- a/source/posts/2016/02-29-podcast-04-08.html.md
+++ b/source/posts/2016/02-29-podcast-04-08.html.md
@@ -3,7 +3,7 @@ title: "08 выпуск 04 сезона. To gem, or not to gem, Mrusty, Table fl
 date: 2016-02-29
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/144/file/podfm_rwpod_my_8_144.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0408.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.08/0408.mp3"
 audio_format: "audio/mpeg"
 audio_length: 22518778
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0408.png"
 
 
 READMORE
-
