--- a/source/posts/2016/03-14-podcast-04-10.html.md
+++ b/source/posts/2016/03-14-podcast-04-10.html.md
@@ -3,7 +3,7 @@ title: "10 выпуск 04 сезона. Rails 4.2.6, 4.1.15, React v15.0rc, Gra
 date: 2016-03-14
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/146/file/podfm_rwpod_my_10_146.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0410.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.10/0410.mp3"
 audio_format: "audio/mpeg"
 audio_length: 54079349
@@ -29,4 +29,3 @@ main_image: "/images/static/04/0410.png"
  - [Artillery is a tool for load-testing HTTP and WebSocket-based applications](https://artillery.io/), [CryptoIdentity.js - a library for simple crypto identity in the browser](https://github.com/richardanaya/cryptoidentity/) и [Freezeframe.js is a script that pauses animated .gifs](https://github.com/ctrl-freaks/freezeframe.js)
 
 READMORE
-
