--- a/source/posts/2016/03-21-podcast-04-11.html.md
+++ b/source/posts/2016/03-21-podcast-04-11.html.md
@@ -3,7 +3,7 @@ title: "11 выпуск 04 сезона. Mastering Concurrency, LeSSL, Spreadshe
 date: 2016-03-21
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/147/file/podfm_rwpod_my_11_147.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0411.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.11/0411.mp3"
 audio_format: "audio/mpeg"
 audio_length: 41040224
@@ -27,4 +27,3 @@ main_image: "/images/static/04/0411.png"
  - [Insight - a WebGL debugging toolkit](https://github.com/3Dparallax/insight/), [Hashids - a small open-source library that generates short, unique, non-sequential ids from numbers](http://hashids.org/), [D3 Calendar Heatmap](https://github.com/DKirwan/calendar-heatmap) и [Substance - a JavaScript library for web-based content editing](http://substance.io/)
 
 READMORE
-
