--- a/source/posts/2016/03-30-podcast-04-12.html.md
+++ b/source/posts/2016/03-30-podcast-04-12.html.md
@@ -3,7 +3,7 @@ title: "12 выпуск 04 сезона. How to upgrade to Rails 5, NotImplement
 date: 2016-03-30
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/148/file/podfm_rwpod_my_12_148.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0412.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.12/0412.mp3"
 audio_format: "audio/mpeg"
 audio_length: 41040224
@@ -27,4 +27,3 @@ main_image: "/images/static/04/0412.png"
  - [Hain - an alternative to Alfred for Windows, built with Electron](https://github.com/appetizermonster/hain), [EventControl - jQuery timeline control with support for stacking events](http://www.kri.gs/eventcontrol/) и [StickyState adds state to position:sticky elements and also polyfills the missing native sticky feature](https://github.com/soenkekluth/sticky-state)
 
 READMORE
-
