--- a/source/posts/2016/04-12-podcast-04-14.html.md
+++ b/source/posts/2016/04-12-podcast-04-14.html.md
@@ -3,7 +3,7 @@ title: "14 выпуск 04 сезона. RubyGems.org vulnerability, React v15.0
 date: 2016-04-12
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/150/file/podfm_rwpod_my_14_150.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0414.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.14/0414.mp3"
 audio_format: "audio/mpeg"
 audio_length: 48556786
@@ -32,4 +32,3 @@ main_image: "/images/static/04/0414.png"
 
 
 READMORE
-
