--- a/source/posts/2016/04-18-podcast-04-15.html.md
+++ b/source/posts/2016/04-18-podcast-04-15.html.md
@@ -3,7 +3,7 @@ title: "15 выпуск 04 сезона. Why You Should Taste Grape, Ruby Method
 date: 2016-04-18
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/151/file/podfm_rwpod_my_15_151.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0415.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.15/0415.mp3"
 audio_format: "audio/mpeg"
 audio_length: 39599439
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0415.png"
 
 
 READMORE
-
