--- a/source/posts/2016/04-27-podcast-04-16.html.md
+++ b/source/posts/2016/04-27-podcast-04-16.html.md
@@ -3,7 +3,7 @@ title: "16 выпуск 04 сезона. Ruby 2.3.1, Rails 5 and MariaDB, V8 Rel
 date: 2016-04-27
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/152/file/podfm_rwpod_my_16_152.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0416.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.16/0416.mp3"
 audio_format: "audio/mpeg"
 audio_length: 44941283
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0416.png"
 
 
 READMORE
-
