--- a/source/posts/2016/05-09-podcast-04-17.html.md
+++ b/source/posts/2016/05-09-podcast-04-17.html.md
@@ -3,7 +3,7 @@ title: "17 выпуск 04 сезона. Rails 5.0.0.rc1, Node v6.1.0, ImageMagi
 date: 2016-05-09
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/153/file/podfm_rwpod_my_17_153.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0417.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.17/0417.mp3"
 audio_format: "audio/mpeg"
 audio_length: 52409686
@@ -34,4 +34,3 @@ main_image: "/images/static/04/0417.png"
 
 
 READMORE
-
