--- a/source/posts/2016/05-23-podcast-04-19.html.md
+++ b/source/posts/2016/05-23-podcast-04-19.html.md
@@ -3,7 +3,7 @@ title: "19 выпуск 04 сезона. ActiveRecord Suppress, Type Wars, JWT A
 date: 2016-05-23
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/155/file/podfm_rwpod_my_19_155.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0419.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.19/0419.mp3"
 audio_format: "audio/mpeg"
 audio_length: 58845470
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0419.png"
  - [Horizon is a realtime, open-source backend for JavaScript apps](http://horizon.io/), [NativeBase - the missing piece of React Native](http://nativebase.io/), [Visual Center - a tool that will find the visual center of your images](http://javier.xyz/visual-center/) и [Timedropper - a jQuery UI timepicker](http://felicegattuso.com/projects/timedropper/)
 
 READMORE
-
