--- a/source/posts/2016/05-31-podcast-04-20.html.md
+++ b/source/posts/2016/05-31-podcast-04-20.html.md
@@ -3,7 +3,7 @@ title: "20 выпуск 04 сезона. Rails 5 Features and Changes, Rails has
 date: 2016-05-31
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/156/file/podfm_rwpod_my_20_156.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0420.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.20/0420.mp3"
 audio_format: "audio/mpeg"
 audio_length: 53104161
@@ -32,4 +32,3 @@ main_image: "/images/static/04/0420.png"
  - [Service Worker и Application Cache](https://www.youtube.com/watch?v=b-KM44kqgxs)
 
 READMORE
-
