--- a/source/posts/2016/06-21-podcast-04-23.html.md
+++ b/source/posts/2016/06-21-podcast-04-23.html.md
@@ -3,7 +3,7 @@ title: "23 выпуск 04 сезона. Elixir over Ruby, PostgreSQL Exercises,
 date: 2016-06-21
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/159/file/podfm_rwpod_my_23_159.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0423.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.23/0423.mp3"
 audio_format: "audio/mpeg"
 audio_length: 65311415
@@ -33,4 +33,3 @@ main_image: "/images/static/04/0423.png"
 
 
 READMORE
-
