--- a/source/posts/2016/07-05-podcast-04-25.html.md
+++ b/source/posts/2016/07-05-podcast-04-25.html.md
@@ -3,7 +3,7 @@ title: "25 выпуск 04 сезона. Rails 5.0, RSpec 3.5, ESLint 3.0.0, D3 
 date: 2016-07-05
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/161/file/podfm_rwpod_my_25_161.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0425.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.25/0425.mp3"
 audio_format: "audio/mpeg"
 audio_length: 42808931
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0425.png"
 
 
 READMORE
-
