--- a/source/posts/2016/07-19-podcast-04-27.html.md
+++ b/source/posts/2016/07-19-podcast-04-27.html.md
@@ -3,7 +3,7 @@ title: "27 выпуск 04 сезона. Replaced React with Phoenix, TypeScript
 date: 2016-07-19
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/163/file/podfm_rwpod_my_27_163.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0427.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.27/0427.mp3"
 audio_format: "audio/mpeg"
 audio_length: 37108458
@@ -26,4 +26,3 @@ main_image: "/images/static/04/0427.png"
 
 
 READMORE
-
