--- a/source/posts/2016/07-26-podcast-04-28.html.md
+++ b/source/posts/2016/07-26-podcast-04-28.html.md
@@ -3,7 +3,7 @@ title: "28 выпуск 04 сезона. New Features in Ruby 2.4, AutoReloader,
 date: 2016-07-26
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/164/file/podfm_rwpod_my_28_164.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0428.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.28/0428.mp3"
 audio_format: "audio/mpeg"
 audio_length: 45448788
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0428.png"
 
 
 READMORE
-
