--- a/source/posts/2016/08-09-podcast-04-30.html.md
+++ b/source/posts/2016/08-09-podcast-04-30.html.md
@@ -3,7 +3,7 @@ title: "30 выпуск 04 сезона. Rake gem explained, Advanced SQL in Rai
 date: 2016-08-09
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/166/file/podfm_rwpod_my_30_166.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0430.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.30/0430.mp3"
 audio_format: "audio/mpeg"
 audio_length: 37819827
@@ -25,4 +25,3 @@ main_image: "/images/static/04/0430.png"
  - [The for Loop vs. forEach in JavaScript](http://thejsguy.com/2016/07/30/javascript-for-loop-vs-array-foreach.html), [This Image is Also an HTML Webpage](https://dev.to/ben/this-image-is-also-an-html-webpage), [Bulma - a modern CSS framework based on Flexbox](http://bulma.io/) и [EQCSS - a CSS Extension for Element Queries & More](http://elementqueries.com/)
 
 READMORE
-
