--- a/source/posts/2016/08-23-podcast-04-32.html.md
+++ b/source/posts/2016/08-23-podcast-04-32.html.md
@@ -3,7 +3,7 @@ title: "32 выпуск 04 сезона. The Ruby Community and Reputation, LeSS
 date: 2016-08-23
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/168/file/podfm_rwpod_my_32_168.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0432.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.32/0432.mp3"
 audio_format: "audio/mpeg"
 audio_length: 33336862
@@ -26,4 +26,3 @@ main_image: "/images/static/04/0432.png"
 
 
 READMORE
-
