--- a/source/posts/2016/10-10-podcast-04-39.html.md
+++ b/source/posts/2016/10-10-podcast-04-39.html.md
@@ -3,7 +3,7 @@ title: "39 выпуск 04 сезона. Battle of Interpreters, React on Rails,
 date: 2016-10-10
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/175/file/podfm_rwpod_my_39_175.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0439.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.39/0439.mp3"
 audio_format: "audio/mpeg"
 audio_length: 32569547
@@ -27,4 +27,3 @@ main_image: "/images/static/04/0439.png"
  - [JavaScript Internationalization API](https://webkit.org/blog/6978/javascript-internationalization-api/), [KUTE.js - a native Javascript animation engine featuring badass performance](http://thednp.github.io/kute.js/) и [iTunes Remote - control iTunes on Mac with other devices on same network](https://github.com/Siddharth11/iTunes-Remote)
 
 READMORE
-
