--- a/source/posts/2016/10-17-podcast-04-40.html.md
+++ b/source/posts/2016/10-17-podcast-04-40.html.md
@@ -3,7 +3,7 @@ title: "40 выпуск 04 сезона. Tips for Writing Fast Rails, Yarn, Mari
 date: 2016-10-17
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/176/file/podfm_rwpod_my_40_176.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0440.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.40/0440.mp3"
 audio_format: "audio/mpeg"
 audio_length: 25973089
@@ -25,4 +25,3 @@ main_image: "/images/static/04/0440.png"
  - [Stupid ES6 tricks](https://engineering.haus.com/dumb-es6-tricks-53ecadd1b29f), [You Might Not Need JavaScript - examples of common UI elements and interactions with HTML and CSS alone](http://youmightnotneedjs.com/), [Tesseract.js - a pure Javascript port of the popular Tesseract OCR engine](http://tesseract.projectnaptha.com/) и [RE:DOM - Tiny UI library](https://redom.js.org/)
 
 READMORE
-
