--- a/source/posts/2016/11-01-podcast-04-42.html.md
+++ b/source/posts/2016/11-01-podcast-04-42.html.md
@@ -3,7 +3,7 @@ title: "42 выпуск 04 сезона. HexaPDF, Helpy, TZOffset, Redux without
 date: 2016-11-01
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/178/file/podfm_rwpod_my_42_178.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0442.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.42/0442.mp3"
 audio_format: "audio/mpeg"
 audio_length: 41889690
@@ -27,4 +27,3 @@ main_image: "/images/static/04/0442.png"
  - [Next.js – small framework for server-rendered universal JavaScript apps](https://zeit.co/blog/next), [MathJax - beautiful math in all browsers](https://www.mathjax.org/), [Swip - a library to create multi device experiments](https://github.com/paulsonnentag/swip), [Shave - a  javascript plugin that truncates multi-line text to fit within an html element based on a set max-height](https://dollarshaveclub.github.io/shave/) и [JS Ipsum - generate your own JS gibberish](http://jsipsum.lunarlogic.io/)
 
 READMORE
-
