--- a/source/posts/2016/11-08-podcast-04-43.html.md
+++ b/source/posts/2016/11-08-podcast-04-43.html.md
@@ -3,7 +3,7 @@ title: "43 выпуск 04 сезона. Duck typing vs type safety in Ruby, Rac
 date: 2016-11-08
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/179/file/podfm_rwpod_my_43_179.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0443.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.43/0443.mp3"
 audio_format: "audio/mpeg"
 audio_length: 20994674
@@ -27,4 +27,3 @@ main_image: "/images/static/04/0443.png"
  - [Tesseract.js: How To OCR Remote Images from a URL in Node](https://www.twilio.com/blog/2016/11/a-simple-way-to-ocr-images-from-a-url-with-tesseract-js.html), [Egjs - a jQuery-based JavaScript library consisting of UI interactions, effects, and utilities](https://naver.github.io/egjs/), [Turbo.js - a small library that makes it easier to perform complex calculations that can be done in parallel](https://turbo.github.io/) и [8 simple rules for a robust, scalable CSS architecture](https://github.com/jareware/css-architecture)
 
 READMORE
-
