--- a/source/posts/2016/11-21-podcast-04-45.html.md
+++ b/source/posts/2016/11-21-podcast-04-45.html.md
@@ -3,7 +3,7 @@ title: "45 выпуск 04 сезона. Ruby 2.3.2, Ruby+OMR JIT, React 15.4.0,
 date: 2016-11-21
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/181/file/podfm_rwpod_my_45_181.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0445.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.45/0445.mp3"
 audio_format: "audio/mpeg"
 audio_length: 36708877
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0445.png"
 
 
 READMORE
-
