--- a/source/posts/2016/11-29-podcast-04-46.html.md
+++ b/source/posts/2016/11-29-podcast-04-46.html.md
@@ -3,7 +3,7 @@ title: "46 выпуск 04 сезона. Ruby 2.3.3, Double Splat Operator, Thre
 date: 2016-11-29
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/182/file/podfm_rwpod_my_46_182.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0446.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.46/0446.mp3"
 audio_format: "audio/mpeg"
 audio_length: 46069769
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0446.png"
 
 
 READMORE
-
