--- a/source/posts/2016/12-12-podcast-04-47.html.md
+++ b/source/posts/2016/12-12-podcast-04-47.html.md
@@ -3,7 +3,7 @@ title: "47 выпуск 04 сезона. Rails 5.0.1.rc1, TypeScript 2.1, Angula
 date: 2016-12-12
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/183/file/podfm_rwpod_my_47_183.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0447.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.47/0447.mp3"
 audio_format: "audio/mpeg"
 audio_length: 46708145
@@ -26,11 +26,10 @@ main_image: "/images/static/04/0447.png"
  - [Announcing TypeScript 2.1](https://blogs.msdn.microsoft.com/typescript/2016/12/07/announcing-typescript-2-1/), [Ember 2.10 and 2.11 beta released](http://emberjs.com/blog/2016/11/30/ember-2-10-released.html), [Angular 2.3.0 Now Available](http://angularjs.blogspot.com/2016/12/angular-230-now-available.html) и [Here’s to the Next 5 Years of MarionetteJs](https://hackernoon.com/heres-to-the-next-5-years-of-marionettejs-12cd45c1da08)
  - [JavaScript Developers: Watch Your Language!](https://bocoup.com/weblog/javascript-developers-watch-your-language), [Angular 2 is terrible](https://meebleforp.com/blog/36/angular-2-is-terrible) и [Custom Elements That Work Anywhere](https://medium.com/dev-channel/custom-elements-that-work-anywhere-898e1dd2bc48)
  - [TypeORM - an Object Relational Mapper (ORM) for node.js written in that can be used with TypeScript or JavaScript (ES5, ES6, ES7)](https://typeorm.github.io/), [Ng2d3 - Angular2 + D3js Composable Re-usable Charting Framework](https://swimlane.github.io/ng2d3/), [Svelte - the magical disappearing UI framework](https://svelte.technology/), [PulltoRefresh.js - Javascript library crafted to power your webapp's pull to refresh feature](https://www.boxfactura.com/pulltorefresh.js/) и [Styletron - a universal CSS-in-JS engine built from the ground up for high-performance](http://styletron.js.org/)
- 
+
 ## Conferences
 
  - [Elixir Meetup 4 Lviv](https://www.facebook.com/events/728091327348773/)
 
 
 READMORE
-
