--- a/source/posts/2016/01-19-podcast-04-02.html.md
+++ b/source/posts/2016/01-19-podcast-04-02.html.md
@@ -3,7 +3,7 @@ title: "02 выпуск 04 сезона. Future of Rails, Scenic, 10th Anniversa
 date: 2016-01-19
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/138/file/podfm_rwpod_my_2_138.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0402.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.02/0402.mp3"
 audio_format: "audio/mpeg"
 audio_length: 40076542
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0402.png"
 
 
 READMORE
-
