--- a/source/posts/2016/02-15-podcast-04-06.html.md
+++ b/source/posts/2016/02-15-podcast-04-06.html.md
@@ -3,7 +3,7 @@ title: "06 выпуск 04 сезона. Kill Your Dependencies, Is Ruby 2.3 Fas
 date: 2016-02-15
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/142/file/podfm_rwpod_my_6_142.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0406.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.06/0406.mp3"
 audio_format: "audio/mpeg"
 audio_length: 27971690
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0406.png"
 
 
 READMORE
-
