--- a/source/posts/2016/03-07-podcast-04-09.html.md
+++ b/source/posts/2016/03-07-podcast-04-09.html.md
@@ -3,7 +3,7 @@ title: "09 выпуск 04 сезона. Rails 4.2.5.2, Thread Pool, Opal-Phaser
 date: 2016-03-07
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/145/file/podfm_rwpod_my_9_145.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0409.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.09/0409.mp3"
 audio_format: "audio/mpeg"
 audio_length: 56371578
@@ -33,4 +33,3 @@ main_image: "/images/static/04/0409.png"
  - [RubyMeditation #7](http://rubymeditation7.eventbrite.com)
 
 READMORE
-
