--- a/source/posts/2016/04-05-podcast-04-13.html.md
+++ b/source/posts/2016/04-05-podcast-04-13.html.md
@@ -3,7 +3,7 @@ title: "13 выпуск 04 сезона. Query Composer, Trailblazer, npm's unpu
 date: 2016-04-05
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/149/file/podfm_rwpod_my_13_149.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0413.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.13/0413.mp3"
 audio_format: "audio/mpeg"
 audio_length: 25438567
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0413.png"
 
 
 READMORE
-
