--- a/source/posts/2016/06-07-podcast-04-21.html.md
+++ b/source/posts/2016/06-07-podcast-04-21.html.md
@@ -3,7 +3,7 @@ title: "21 выпуск 04 сезона. Ruby concurrency, dropping IE8 support,
 date: 2016-06-07
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/157/file/podfm_rwpod_my_21_157.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0421.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.21/0421.mp3"
 audio_format: "audio/mpeg"
 audio_length: 41395438
@@ -29,4 +29,3 @@ main_image: "/images/static/04/0421.png"
 
 
 READMORE
-
