--- a/source/posts/2016/06-14-podcast-04-22.html.md
+++ b/source/posts/2016/06-14-podcast-04-22.html.md
@@ -3,7 +3,7 @@ title: "22 выпуск 04 сезона. Duck-typing with #to_proc, FasterPath, 
 date: 2016-06-14
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/158/file/podfm_rwpod_my_22_158.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0422.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.22/0422.mp3"
 audio_format: "audio/mpeg"
 audio_length: 47241279
@@ -29,4 +29,3 @@ main_image: "/images/static/04/0422.png"
 
 
 READMORE
-
