--- a/source/posts/2016/06-28-podcast-04-24.html.md
+++ b/source/posts/2016/06-28-podcast-04-24.html.md
@@ -3,7 +3,7 @@ title: "24 выпуск 04 сезона. Ruby 2.4.0-preview1, Npm-rails, strange
 date: 2016-06-28
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/160/file/podfm_rwpod_my_24_160.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0424.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.24/0424.mp3"
 audio_format: "audio/mpeg"
 audio_length: 40179962
@@ -29,4 +29,3 @@ main_image: "/images/static/04/0424.png"
 
 
 READMORE
-
