--- a/source/posts/2016/07-12-podcast-04-26.html.md
+++ b/source/posts/2016/07-12-podcast-04-26.html.md
@@ -3,7 +3,7 @@ title: "26 выпуск 04 сезона. ActionCable under stress, AGC source co
 date: 2016-07-12
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/162/file/podfm_rwpod_my_26_162.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0426.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.26/0426.mp3"
 audio_format: "audio/mpeg"
 audio_length: 45220788
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0426.png"
 
 
 READMORE
-
