--- a/source/posts/2016/08-15-podcast-04-31.html.md
+++ b/source/posts/2016/08-15-podcast-04-31.html.md
@@ -3,7 +3,7 @@ title: "31 выпуск 04 сезона. Rails 5.0.0.1, 4.2.7.1, 3.2.22.3, dry-s
 date: 2016-08-15
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/167/file/podfm_rwpod_my_31_167.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0431.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.31/0431.mp3"
 audio_format: "audio/mpeg"
 audio_length: 45930885
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0431.png"
 
 
 READMORE
-
