--- a/source/posts/2016/08-29-podcast-04-33.html.md
+++ b/source/posts/2016/08-29-podcast-04-33.html.md
@@ -3,7 +3,7 @@ title: "33 выпуск 04 сезона. Sinatra Two Point Oh, Journey of a Trai
 date: 2016-08-29
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/169/file/podfm_rwpod_my_33_169.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0433.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.33/0433.mp3"
 audio_format: "audio/mpeg"
 audio_length: 30429572
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0433.png"
 
 
 READMORE
-
