--- a/source/posts/2016/09-06-podcast-04-34.html.md
+++ b/source/posts/2016/09-06-podcast-04-34.html.md
@@ -3,7 +3,7 @@ title: "34 выпуск 04 сезона. Quiet assets in Rails 5, Octoshark, Jer
 date: 2016-09-06
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/170/file/podfm_rwpod_my_34_170.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0434.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.34/0434.mp3"
 audio_format: "audio/mpeg"
 audio_length: 44162957
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0434.png"
 
 
 READMORE
-
