--- a/source/posts/2016/09-13-podcast-04-35.html.md
+++ b/source/posts/2016/09-13-podcast-04-35.html.md
@@ -3,7 +3,7 @@ title: "35 выпуск 04 сезона. Five Rails Gotchas, Vim 8.0, Quill 1.0,
 date: 2016-09-13
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/171/file/podfm_rwpod_my_35_171.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0435.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.35/0435.mp3"
 audio_format: "audio/mpeg"
 audio_length: 35256869
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0435.png"
 
 
 READMORE
-
