--- a/source/posts/2016/09-20-podcast-04-36.html.md
+++ b/source/posts/2016/09-20-podcast-04-36.html.md
@@ -3,7 +3,7 @@ title: "36 выпуск 04 сезона. Ruby 2.4.0-preview2, Angular 2.0.0, N+1
 date: 2016-09-20
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/172/file/podfm_rwpod_my_36_172.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0436.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.36/0436.mp3"
 audio_format: "audio/mpeg"
 audio_length: 37776907
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0436.png"
 
 
 READMORE
-
