--- a/source/posts/2016/10-04-podcast-04-38.html.md
+++ b/source/posts/2016/10-04-podcast-04-38.html.md
@@ -3,7 +3,7 @@ title: "38 выпуск 04 сезона. Leaflet 1.0, Concurrency in Ruby 3 with
 date: 2016-10-04
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/174/file/podfm_rwpod_my_38_174.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0438.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.38/0438.mp3"
 audio_format: "audio/mpeg"
 audio_length: 20342189
@@ -26,4 +26,3 @@ main_image: "/images/static/04/0438.png"
 
 
 READMORE
-
