--- a/source/posts/2016/10-25-podcast-04-41.html.md
+++ b/source/posts/2016/10-25-podcast-04-41.html.md
@@ -3,7 +3,7 @@ title: "41 выпуск 04 сезона. DDoS Attack on DNS, Npm 4.0.0, Overcomi
 date: 2016-10-25
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/177/file/podfm_rwpod_my_41_177.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0441.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.41/0441.mp3"
 audio_format: "audio/mpeg"
 audio_length: 36794018
@@ -32,4 +32,3 @@ main_image: "/images/static/04/0441.png"
  - [Elixir Meetup 3.1](https://www.facebook.com/events/556566704546455/)
 
 READMORE
-
