--- a/source/posts/2016/11-15-podcast-04-44.html.md
+++ b/source/posts/2016/11-15-podcast-04-44.html.md
@@ -3,7 +3,7 @@ title: "44 выпуск 04 сезона. Ruby 2.4 Binding#irb, GeoSpatial Search
 date: 2016-11-15
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/180/file/podfm_rwpod_my_44_180.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0444.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.44/0444.mp3"
 audio_format: "audio/mpeg"
 audio_length: 34701053
@@ -28,4 +28,3 @@ main_image: "/images/static/04/0444.png"
 
 
 READMORE
-
