--- a/source/posts/2016/12-19-podcast-04-48.html.md
+++ b/source/posts/2016/12-19-podcast-04-48.html.md
@@ -3,7 +3,7 @@ title: "48 выпуск 04 сезона. Ruby 2.4.0-rc1, Rake without Rails, Rea
 date: 2016-12-19
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/184/file/podfm_rwpod_my_48_184.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0448.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.48/0448.mp3"
 audio_format: "audio/mpeg"
 audio_length: 33378830
@@ -29,4 +29,3 @@ main_image: "/images/static/04/0448.png"
 
 
 READMORE
-
