--- a/source/posts/2016/12-26-podcast-04-49.html.md
+++ b/source/posts/2016/12-26-podcast-04-49.html.md
@@ -3,7 +3,7 @@ title: "49 выпуск 04 сезона. Ruby 2.4.0, Rails 5.0.1, AnyCable, Side
 date: 2016-12-26
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/185/file/podfm_rwpod_my_49.mp3"
+audio_url: "http://mp3.rwpod.com/podcasts/04/0449.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.49/0449.mp3"
 audio_format: "audio/mpeg"
 audio_length: 26550345
