--- a/source/posts/2017/02-13-podcast-05-06.html.md
+++ b/source/posts/2017/02-13-podcast-05-06.html.md
@@ -25,6 +25,7 @@ main_image: "/images/static/05/0506.png"
  - [How to Achieve Reusability with React Components](https://medium.com/walmartlabs/how-to-achieve-reusability-with-react-components-81edeb7fb0e0)
  - [Why Webpack 2's Tree Shaking is not as effective as you think](https://advancedweb.hu/2017/02/07/treeshaking/)
  - [Distributed Object Protocol](https://distributedobjectprotocol.org/)
+ - [Kap - an open-source screen recorder built with web technology](https://getkap.co/)
  - [Dante II - just another medium clone built on top of DraftJs](https://michelson.github.io/dante2/)
 
 READMORE
