--- a/source/posts/2017/02-13-podcast-05-06.html.md
+++ b/source/posts/2017/02-13-podcast-05-06.html.md
@@ -1,5 +1,5 @@
 ---
-title: "06 выпуск 05 сезона.  и прочее"
+title: "06 выпуск 05 сезона. The Lego Way of Structuring Rails Code, Sidekiq-merger, Relaxo, Kap, Dante II, Notti.js, Lepton и прочее"
 date: 2017-02-13
 tags:
  - podcasts
@@ -16,16 +16,14 @@ main_image: "/images/static/05/0506.png"
 
 ## Ruby
 
- - [Hash Tables Explained](http://www.blackbytes.info/2017/02/hash-tables-explained/)
- - [Simple tips to make scaling your database easier as you grow](http://blog.honeybadger.io/easy_rails_database_scaling_wins/)
- - [Sidekiq-merger - merge sidekiq jobs occurring before the execution times](https://github.com/dtaniwaki/sidekiq-merger)
+ - [The Lego Way of Structuring Rails Code](http://engineering.vinted.com/2017/02/13/how-to-structure-code/), [Simple tips to make scaling your database easier as you grow](http://blog.honeybadger.io/easy_rails_database_scaling_wins/) и [Hash Tables Explained](http://www.blackbytes.info/2017/02/hash-tables-explained/)
+ - [How to DRY out your RSpec Tests using Shared Examples](https://medium.freecodecamp.com/how-to-dry-out-your-rspec-tests-using-shared-examples-d5cc5d33fd76) и [Autocomplete Using Redis](http://blog.katpadi.ph/autocomplete-with-redis/)
+ - [Sidekiq-merger - merge sidekiq jobs occurring before the execution times](https://github.com/dtaniwaki/sidekiq-merger), [Relaxo - a transactional database built on top of git. It's aim is to provide a robust interface for document storage and sorted indexes](https://github.com/ioquatix/relaxo) и [Decoding and Interacting with Barcodes](https://www.driftingruby.com/episodes/decoding-and-interacting-with-barcodes)
 
 ## JavaScript
 
- - [How to Achieve Reusability with React Components](https://medium.com/walmartlabs/how-to-achieve-reusability-with-react-components-81edeb7fb0e0)
- - [Why Webpack 2's Tree Shaking is not as effective as you think](https://advancedweb.hu/2017/02/07/treeshaking/)
- - [Distributed Object Protocol](https://distributedobjectprotocol.org/)
- - [Kap - an open-source screen recorder built with web technology](https://getkap.co/)
- - [Dante II - just another medium clone built on top of DraftJs](https://michelson.github.io/dante2/)
+ - [How to Achieve Reusability with React Components](https://medium.com/walmartlabs/how-to-achieve-reusability-with-react-components-81edeb7fb0e0) и [Why Webpack 2's Tree Shaking is not as effective as you think](https://advancedweb.hu/2017/02/07/treeshaking/)
+ - [Top mentioned books on stackoverflow.com](http://www.dev-books.com/), [Distributed Object Protocol](https://distributedobjectprotocol.org/) и [Mnemonist - curated collection of data structures for the JavaScript language](https://yomguithereal.github.io/mnemonist/)
+ - [Kap - an open-source screen recorder built with web technology](https://getkap.co/), [Lepton - a lean GitHub Gist Desktop Client based on Electron](http://hackjutsu.com/Lepton/), [Dante II - just another medium clone built on top of DraftJs](https://michelson.github.io/dante2/) и [Notti.js - dead simple user notification](https://notti.surge.sh/)
 
 READMORE
