--- a/source/posts/2017/02-20-podcast-05-07.html.md
+++ b/source/posts/2017/02-20-podcast-05-07.html.md
@@ -1,5 +1,5 @@
 ---
-title: "07 выпуск 05 сезона.  и прочее"
+title: "07 выпуск 05 сезона. Hanami v1.0.0.beta1, Unicorn vs. Puma vs. Passenger, Understanding Scope in JavaScript, Htmlreference.io и прочее"
 date: 2017-02-20
 tags:
  - podcasts
@@ -16,13 +16,14 @@ main_image: "/images/static/05/0507.png"
 
 ## Ruby
 
- - [Announcing Hanami v1.0.0.beta1](http://hanamirb.org/blog/2017/02/14/announcing-hanami-100beta1.html)
- - [Upgrading a Ruby on Rails application](http://blog.michelada.io/upgrading-a-ruby-on-rails-application)
- - [Writing a One-time Script in Rails](https://www.justinweiss.com/articles/writing-a-one-time-script-in-rails/)
- - [Unicorn vs. Puma vs. Passenger: which app server is right for you?](http://blog.scoutapp.com/articles/2017/02/10/which-ruby-app-server-is-right-for-you)
+ - [Announcing Hanami v1.0.0.beta1](http://hanamirb.org/blog/2017/02/14/announcing-hanami-100beta1.html), [Upgrading a Ruby on Rails application](http://blog.michelada.io/upgrading-a-ruby-on-rails-application) и [Replacing the asset pipeline with Webpack 2 in Rails](http://www.krisquigley.co.uk/2017/02/17/replacing-the-asset-pipeline-with-webpack-2-in-rails.html)
+ -  [Validation, Database Constraint, or Both?](https://robots.thoughtbot.com/validation-database-constraint-or-both) и [Ruby superpowers — with great power comes a great prepend](https://medium.com/@ricardobrazao/ruby-superpowers-with-great-power-comes-a-great-prepend-6c1ccd2a7205)
+ - [Writing a One-time Script in Rails](https://www.justinweiss.com/articles/writing-a-one-time-script-in-rails/) и [Unicorn vs. Puma vs. Passenger: which app server is right for you?](http://blog.scoutapp.com/articles/2017/02/10/which-ruby-app-server-is-right-for-you)
 
 ## JavaScript
 
- - [Native ECMAScript modules: dynamic import()](https://blog.hospodarets.com/native-ecmascript-modules-dynamic-import)
+ - [Native ECMAScript modules: dynamic import()](https://blog.hospodarets.com/native-ecmascript-modules-dynamic-import), [Most of the web really sucks if you have a slow connection](http://danluu.com/web-bloat/) и [Interview Algorithm Questions in Javascript](https://github.com/kennymkchan/interview-questions-in-javascript)
+ - [Understanding Scope in JavaScript](https://scotch.io/tutorials/understanding-scope-in-javascript) и [Angular is not a massive monolith – but your mom is](https://gofore.com/angular-is-not-a-massive-monolith/)
+ - [Htmlreference.io - a free guide to HTML](http://htmlreference.io/), [Rough.js - create graphics with a hand-drawn, sketchy, appearance](https://roughjs.com/) и [SpinStroke - spinning stroke animation with morphing effect](https://lichin.me/spinStroke/)
 
 READMORE
