--- a/source/posts/2017/02-27-podcast-05-08.html.md
+++ b/source/posts/2017/02-27-podcast-05-08.html.md
@@ -1,5 +1,5 @@
 ---
-title: "08 выпуск 05 сезона.  и прочее"
+title: "08 выпуск 05 сезона. Rails 5.1.0.beta1, Ruby `reject!`, Brains, Won WebAssembly logo contest, Babel-preset-env, AR.js и прочее"
 date: 2017-02-27
 tags:
  - podcasts
@@ -16,21 +16,15 @@ main_image: "/images/static/05/0508.png"
 
 ## Ruby
 
- - [Rails 5.1.0.beta1](http://weblog.rubyonrails.org/2017/2/23/Rails-5-1-beta1/)
- - [Ruby `reject!`](http://accidentallyquadratic.tumblr.com/post/157496054437/ruby-reject)
- - [15 Weird Things About Ruby That You Should Know](http://www.blackbytes.info/2017/02/weird-ruby/)
- - [Lessons learned and Code Smells detected with Reek](https://review.ebertapp.io/lessons-learned-and-code-smells-detected-with-reek-ca9374a3eece)
- - [Creating Powerful Command Line Tools in Ruby](https://blog.codeship.com/creating-powerful-command-line-tools-in-ruby/)
- - [Objects as Ruby Hash Keys](http://blog.honeybadger.io/objects-as-ruby-hash-keys/)
- - [Using PhantomJS to Capture Analytics for a Rails Email Template](http://brandonhilkert.com/blog/using-phantomjs-to-capture-analytics-for-a-rails-email-template/)
- - [KMS - simple and powerful Ruby on Rails CMS for developers](http://getkms.com/)
- - [Brains - Feedforward neural network toolkit for JRuby](https://github.com/jedld/brains-jruby)
- - [FindWithOrder - find records in the same order of input array](https://github.com/khiav223577/find_with_order)
- - [Working with Internationalization](https://www.driftingruby.com/episodes/working-with-internationalization)
+ - [Rails 5.1.0.beta1](http://weblog.rubyonrails.org/2017/2/23/Rails-5-1-beta1/), [15 Weird Things About Ruby That You Should Know](http://www.blackbytes.info/2017/02/weird-ruby/) и [Ruby `reject!`](http://accidentallyquadratic.tumblr.com/post/157496054437/ruby-reject)
+ - [Using PhantomJS to Capture Analytics for a Rails Email Template](http://brandonhilkert.com/blog/using-phantomjs-to-capture-analytics-for-a-rails-email-template/), [Lessons learned and Code Smells detected with Reek](https://review.ebertapp.io/lessons-learned-and-code-smells-detected-with-reek-ca9374a3eece), [Objects as Ruby Hash Keys](http://blog.honeybadger.io/objects-as-ruby-hash-keys/) и [Creating Powerful Command Line Tools in Ruby](https://blog.codeship.com/creating-powerful-command-line-tools-in-ruby/)
+ - [KMS - simple and powerful Ruby on Rails CMS for developers](http://getkms.com/), [Brains - Feedforward neural network toolkit for JRuby](https://github.com/jedld/brains-jruby) и [Working with Internationalization (video)](https://www.driftingruby.com/episodes/working-with-internationalization)
 
 ## JavaScript
 
- - [Trello Clone](https://github.com/madmous/trello-clone)
+ - [HTTP/2 – A Real-World Performance Test and Analysis](https://css-tricks.com/http2-real-world-performance-test-analysis/), [Getting started with variable fonts](http://clagnut.com/blog/2389/) и [Won WebAssembly logo contest](https://medium.com/@carlosbaraza/won-webassembly-logo-contest-7dc4623f5cf)
+ - [Babel-preset-env: a preset that configures Babel for you](http://www.2ality.com/2017/02/babel-preset-env.html), [Why Learn Functional Programming in JavaScript?](https://medium.com/javascript-scene/why-learn-functional-programming-in-javascript-composing-software-ea13afc7a257) и [Code review checklist](https://ana-balica.github.io/2017/02/21/code-review-checklist/)
+ - [Propeller - a front-end responsive framework based on Google's Material Design Standards & Bootstrap](http://propeller.in/), [AR.js - Efficient Augmented Reality for the Web using ARToolKit](https://github.com/jeromeetienne/AR.js), [Trello Clone](https://github.com/madmous/trello-clone) и [HTML5 Robot](http://html5bot.webflow.io/)
 
 ## Conferences
 
